trata exceção nas buscas com caracteres especiais